--- a/HrSystem/HrSystem/Views/Shared/_Layout.cshtml
+++ b/HrSystem/HrSystem/Views/Shared/_Layout.cshtml
@@ -4,45 +4,183 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - HrSystem</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.24/css/dataTables.bootstrap4.min.css">
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: "Roboto", sans-serif;
+        }
+
+        header {
+            position: fixed;
+            background: #22242A;
+            padding: 35px;
+            width: 100%;
+            height: 30px;
+        }
+
+        .left_area h3 {
+            color: #fff;
+            margin: -37px;
+            margin-left: 40px;
+            text-transform: uppercase;
+            font-size: 22px;
+            font-weight: 900;
+        }
+
+        .left area span {
+            color: #1DC4E7;
+        }
+
+        .logout_btn {
+            padding: 20px;
+            background: #198303;
+            text-decoration: none;
+            float: right;
+            margin-top: -7px;
+            margin-right: -15px;
+            border-radius: 2px;
+            font-size: 15px;
+            font-weight: 600;
+            color: #fff;
+            transition: 0.5s;
+            transition-property: background;
+        }
+
+            .logout_btn:hover {
+                background: #0D9DBB;
+            }
+
+        .sidebar {
+            background: #2F323A;
+            margin-top: 70px;
+            padding-top: 30px;
+            position: fixed;
+            left: 0;
+            width: 250px;
+            height: 100%;
+            transition: 0.5s;
+            transition-property: left;
+        }
+
+            .sidebar .profile_image {
+                width: 100px;
+                height: 100px;
+                border-radius: 100px;
+                margin-bottom: 10px;
+            }
+
+            .sidebar h4 {
+                color: #ccc;
+                margin-top: 0;
+                margin-bottom: 20px;
+            }
+
+            .sidebar a {
+                color: #fff;
+                display: block;
+                width: 100%;
+                line-height: 60px;
+                text-decoration: none;
+                padding-left: 40px;
+                box-sizing: border-box;
+                transition: 0.5s;
+                transition-property: background;
+            }
+
+                .sidebar a:hover {
+                    background: #19B3D3;
+                }
+
+            .sidebar i {
+                padding-right: 10px;
+            }
+
+        label #sidebar_btn {
+            z-index: 1;
+            color: #fff;
+            position: fixed;
+            cursor: pointer;
+            left: 300px;
+            font-size: 20px;
+            margin: -19px 0;
+            transition: 0.5s;
+            transiotion-property: color;
+        }
+
+            label #sidebar_btn:hover {
+                color: #19B3D3;
+            }
+
+
+        #check:checked ~ .sidebar {
+            left: -190px;
+        }
+
+            #check:checked ~ .sidebar a span {
+                display: none;
+            }
+
+            #check:checked ~ .sidebar a {
+                font-size: 20px;
+                margin-left: 170px;
+                width: 80px;
+            }
+
+        .content {
+            box-sizing: border-box;
+            padding-top: 80px;
+            margin-left: 250px;
+            background-position: center;
+            background-size: cover;
+            height: 100vh;
+        }
+
+        #check:checked ~ .content {
+            margin-left: 60px;
+        }
+
+        #check {
+            display: none;
+        }
+    </style>
+
 </head>
 <body>
+    <input type="checkbox" id="check">
+    <!--header area start-->
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">HrSystem</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
-
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2021 - HrSystem - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        <label for="check">
+            <i class="fas fa-bars" id="sidebar_btn"></i>
+        </label>
+        <div class="left_area">
+            <h3>VM3<span>Tech</span></h3>
         </div>
-    </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @RenderSection("Scripts", required: false)
+        <div class="right_area">
+            <a href="#" class="logout_btn">Logout</a>
+        </div>
+    </header>
+    <!--header area end-->
+    <!--sidebar start-->
+    <div class="sidebar">
+        <center>
+            <img src="usercircle.jpg" class="profile_image" alt="">
+            <h4>Admin</h4>
+        </center>
+        <a href="file:///C:/Users/Admin/Desktop/HR/admindashboard.html"><i class="fas fa-home"></i><span>Home</span></a>
+        <a href="file:///C:/Users/Admin/Desktop/HR/applications.html"><i class="fas fa-user-tie"></i><span>Applications</span></a>
+        <a href="file:///C:/Users/Admin/Desktop/HR/vacancy.html"><i class="fas fa-list"></i><span>Vacancy</span></a>
+        <a href="file:///C:/Users/Admin/Desktop/HR/statuscategory.html"><i class="fas fa-list"></i><span>Status Category</span></a>
+        <a href="file:///C:/Users/Admin/Desktop/HR/users.html"><i class="fas fa-users"></i><span>Users</span></a>
+        <a href="file:///C:/Users/Admin/Desktop/HR/setting.html"><i class="fas fa-cogs"></i><span>Settings</span></a>
+    </div>
+    <!--sidebar end-->
+    <div class="content">
+        @RenderBody();
+        </div>
 </body>
 </html>
+ 
