--- a/HrSystem/HrSystem/Views/Applications/jquery.cshtml
+++ b/HrSystem/HrSystem/Views/Applications/jquery.cshtml
@@ -8,8 +8,8 @@
         <table id="example" class="table table-striped table-bordered" style="width:100%">
             <thead>
                 <tr>
-                    <th><a href="/applications/index?columnName=id&orderBy=@ViewBag.orderBy">#</a></th>
-                    <th><a href="/applications/index?columnName=name&orderBy=@ViewBag.orderBy">Applicant Information</a></th>
+                    <th>#</th>
+                    <th>Applicant Information</th>
                     <th>Document</th>
                     <th>Status</th>
                     <th>Action</th>
@@ -55,5 +55,10 @@
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.24/js/dataTables.bootstrap4.min.js"></script>
-     
+    <script>
+            $(document).ready(function () {
+                $('#example').DataTable();
+            });
+    </script>
+
  
