--- a/HrSystem/HrSystem/Views/Applications/Index.cshtml
+++ b/HrSystem/HrSystem/Views/Applications/Index.cshtml
@@ -9,12 +9,22 @@
     
     PageModel pageModel = ViewBag.pageModel as PageModel;
 }
+
+<form method="post" action="/Applications/Index">
+
+    <input type="hidden" name="columnName" id="columnName" value="@ViewBag.columnName" />
+    <input type="hidden" name="orderBy" id="orderBy"  value="@ViewBag.orderBy" />
+    <input type="hidden" name="currentPage" id="currentPage" value="@pageModel.CurrentPage" />
+
+    <button type="submit" style="display:none" id="btnSubmit" >Submit</button>
+
+</form>
 <div class="container">
     <table id="example" class="table table-striped table-bordered" style="width:100%">
         <thead>
             <tr>
-                <th><a href="/applications/index?columnName=id&orderBy=@ViewBag.orderBy">#</a></th>
-                <th><a href="/applications/index?columnName=name&orderBy=@ViewBag.orderBy">Applicant Information</a></th>
+                <th><a onclick="sort('id', '@ViewBag.orderBy')" href="/applications/index?columnName=id&orderBy=@ViewBag.orderBy">#</a></th>
+                <th><a onclick="sort('name', '@ViewBag.orderBy')" href="/applications/index?columnName=name&orderBy=@ViewBag.orderBy">Applicant Information</a></th>
                 <th>Document</th>
                 <th>Status</th>
                 <th>Action</th>
@@ -69,12 +79,12 @@
                     {
                         if (i == pageModel.CurrentPage)
                         {
-                            <li class="paginate_button page-item active"><a href="/applications/index?currentPage=@i" aria-controls="example" data-dt-idx="1" tabindex="0" class="page-link">@i</a></li>
+                            <li class="paginate_button page-item active"><a onclick="pageChange('@i')" href="/applications/index?currentPage=@i" aria-controls="example" data-dt-idx="1" tabindex="0" class="page-link">@i</a></li>
 
                         }
                         else
                         {
-                            <li class="paginate_button page-item"><a href="/applications/index?currentPage=@i" aria-controls="example" data-dt-idx="1" tabindex="0" class="page-link">@i</a></li>
+                            <li class="paginate_button page-item"><a onclick="pageChange('@i')" href="/applications/index?currentPage=@i" aria-controls="example" data-dt-idx="1" tabindex="0" class="page-link">@i</a></li>
 
                         }
 
@@ -86,6 +96,39 @@
     </div>
 
 </div>
+
+<script>
+
+    function pageSubmit() {
+        document.getElementById("btnSubmit").click();
+    }
+
+    function pageChange(currentPage) {
+        event.preventDefault();
+
+
+        document.getElementById("currentPage").value = currentPage;
+        pageSubmit();
+        return false;
+    }
+
+
+    function sort(columnName, orderBy) {
+        event.preventDefault();
+
+
+        document.getElementById("columnName").value = columnName;
+        if ("asc" == orderBy) {
+            document.getElementById("orderBy").value = "desc";
+        } else {
+            document.getElementById("orderBy").value = "asc";
+        }
+       
+
+        pageSubmit();
+        return false;
+    }
+</script>
 
 <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
