--- a/HrSystem/HrSystem/Views/Users/Index.cshtml
+++ b/HrSystem/HrSystem/Views/Users/Index.cshtml
@@ -1,6 +1,41 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-I am in users page 
+﻿
+
+<center><button type="button" class="btn btn-primary">+ New User</button></center>
+<br>
+
+<div class="container">
+<table id="example" class="table table-striped table-bordered" style="width:100%">
+        <thead>
+            <tr>
+                <th>#</th>
+                <th>Name</th>
+                <th>Username</th>
+                <th>Action</th>
+                
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Administrator</td>
+                <td>admin</td>
+               
+                <td><button type="button" class="btn btn-warning">Edit</button>
+			<button type="button" class="btn btn-danger">Delete</button>
+			</td>
+                
+            </tr>
+<tr>
+                <td>2</td>
+
+                <td>Administrator1</td>
+                <td>admin1</td>
+                <td><button type="button" class="btn btn-warning">Edit</button>
+			<button type="button" class="btn btn-danger">Delete</button>
+			</td>
+                
+            </tr>
+</tbody>
+
+    </table>
+</div>
