--- a/HrSystem/HrSystem/Views/Users/Index.cshtml
+++ b/HrSystem/HrSystem/Views/Users/Index.cshtml
@@ -1,40 +1,38 @@
-﻿
-
+﻿@model List<Users>
 <center><button type="button" class="btn btn-primary">+ New User</button></center>
-<br>
-
-<div class="container">
+<br >
+<div class="container" style="margin-top:-400px">
 <table id="example" class="table table-striped table-bordered" style="width:100%">
         <thead>
             <tr>
-                <th>#</th>
-                <th>Name</th>
+                <th><a href="/Users/Index?columnName=id&orderBy=@ViewBag.OrderBy">UserId</a> </th>
+                <th><a href="/Users/Index?columnName=name&orderBy=@ViewBag.OrderBy">Name</a></th>
                 <th>Username</th>
                 <th>Action</th>
                 
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>1</td>
-                <td>Administrator</td>
-                <td>admin</td>
-               
+                @for(int i=0; i< Model.Count; i++)
+                {
+                <tr>
+                <td>@Model[i].UserId</td> <br>
+                <td>@Model[i].Name</td> <br>
+                <td>@Model[i].UserName</td> <br>
+                <td>@Model[i].Action</td><br>
                 <td><button type="button" class="btn btn-warning">Edit</button>
 			<button type="button" class="btn btn-danger">Delete</button>
 			</td>
+                </tr>
                 
-            </tr>
-<tr>
-                <td>2</td>
 
-                <td>Administrator1</td>
-                <td>admin1</td>
-                <td><button type="button" class="btn btn-warning">Edit</button>
-			<button type="button" class="btn btn-danger">Delete</button>
-			</td>
+                }
+
+            
                 
-            </tr>
+                
+            
+<
 </tbody>
 
     </table>
