--- a/HrSystem/HrSystem/Views/Users/Index.cshtml
+++ b/HrSystem/HrSystem/Views/Users/Index.cshtml
@@ -1,25 +1,65 @@
-﻿@model List<Users>
+﻿@model List<User>
+@using HRModels
 <center><button type="button" class="btn btn-primary">+ New User</button></center>
 <br >
-<div class="container" style="margin-top:-400px">
+<hr>
+@{
+    UserModel userModel = ViewBag.userModel as UserModel;
+    PageModel pageModel = ViewBag.pageModel as PageModel;
+}
+
+
+   <form method="post" action="/Users/Index">
+<div class="row">
+<div class="col-6">
+<div class="form-group">
+<lable for="UserId">UserId:</lable>
+<input type="text" class="form-control" value="@userModel.UserIdSearch" name="UserIdSearch" id="UserIdSearch"/>
+
+</div>
+
+</div>
+
+
+
+<div class="col-6">
+<div class="form-group">
+<lable for="Name">Name</lable>
+<input type="text" class="form-control" value="@userModel.NameSearch" name="NameSearch" id="NameSearch"/>
+
+</div>
+
+</div>
+</div>
+
+<input type="hidden" name="columnName" id="columnName" value="@ViewBag.columnName"/>
+<input type="hidden" name="orderBy" id="orderBy" value="@ViewBag.orderBy"/>
+<input type="hidden" name="currentPage" id="currentPage" value="@pageModel.CurrentPage"/>
+<button type="submit"  id="btnsub">Search</button>
+
+
+   </form>
+
+
+<div class="container">
 <table id="example" class="table table-striped table-bordered" style="width:100%">
         <thead>
             <tr>
-                <th><a href="/Users/Index?columnName=id&orderBy=@ViewBag.OrderBy">UserId</a> </th>
-                <th><a href="/Users/Index?columnName=name&orderBy=@ViewBag.OrderBy">Name</a></th>
+                <th><a onclick="sort('UserId','@ViewBag.orderBy')"  href="/Users/Index?columnName=id&orderBy=@ViewBag.orderBy">UserId</a> </th>
+                <th><a onclick="sort('Name','@ViewBag.orderBy')"  href="/Users/Index?columnName=name&orderBy=@ViewBag.orderBy">Name</a></th>
                 <th>Username</th>
                 <th>Action</th>
                 
             </tr>
         </thead>
         <tbody>
-                @for(int i=0; i< Model.Count; i++)
+                @for(int i = 0; i < Model.Count; i++)
                 {
                 <tr>
-                <td>@Model[i].UserId</td> <br>
-                <td>@Model[i].Name</td> <br>
-                <td>@Model[i].UserName</td> <br>
-                <td>@Model[i].Action</td><br>
+                <td>@Model[i].UserId</td> 
+                <td>@Model[i].Name</td>
+                <td>@Model[i].UserName</td>
+                <td>@Model[i].Action</td>
                 <td><button type="button" class="btn btn-warning">Edit</button>
 			<button type="button" class="btn btn-danger">Delete</button>
 			</td>
@@ -36,4 +76,64 @@
 </tbody>
 
     </table>
-</div>
+   
+  
+  <div class="row"><div class="col-sm-12 col-md-5">
+          <div class="dataTables_info" id="example_info" role="status" aria-live="polite">Showing <span>@(pageModel.StartIndex+1)</span> to <span>@(pageModel.EndIndex+1)</span>of <span>@(pageModel.TotalRowCount)</span> entries</div></div>
+ <div class="col-sm-12 col-md-7">
+          <div class="dataTables_paginate paging_simple_numbers" id="example_paginate">
+               <ul class="pagination">
+                  <li class="paginate_button page-item previous disabled" id="example_previous"><a href="#" aria-controls="example" data-dt-idx="0" tabindex="0" class="page-link">Previous</a></li>
+                  @for(int i=1; i<= pageModel.PageCount; i=i+1)
+                    {
+                                   if (i== pageModel.CurrentPage)
+                        {
+                            <li class="paginate_button page-item active"><a onclick="pageChange('@i')" href="/Users/Index?CurrentPage=@i" aria-controls="example" data-dt-idx="1" tabindex="0" class="page-link">@i</a></li>
+                        }
+                        else
+                        {
+                            <li class="paginate_button page-item "><a onclick="pageChange('@i')" href="/Users/Index?CurrentPage=@i" aria-controls="example" data-dt-idx="1" tabindex="0" class="page-link">@i</a></li>
+                  
+                        }
+                    }
+                    
+                 <li class="paginate_button page-item next" id="example_next"><a href="#" aria-controls="example" data-dt-idx="3" tabindex="0" class="page-link">Next</a></li>
+               </ul>
+         </div>
+  </div><
+
+  </div>
+  <script>
+function pageSubmit(){
+document.getElementById("btnsub").click();
+}
+function pageChange(currentPage)
+{
+          event.preventDefault();
+document.getElementById("currentPage").value=currentPage;
+pageSubmit();
+return false;
+}
+
+
+
+
+function sort(columnName,orderBy)
+{
+          event.preventDefault();
+document.getElementById("columnName").value=columnName;
+if("asc"==orderBy){
+document.getElementById("orderBy").value="desc";
+}
+else{
+
+document.getElementById("orderBy").value="asc";
+}
+pageSubmit();
+return false;
+}
+</script>
+
+ <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+ <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
+ <script src="https://cdn.datatables.net/1.10.24/js/dataTables.bootstrap4.min.js"></script>
