--- a/HrSystem/HrSystem/Views/Shared/_Layout.cshtml
+++ b/HrSystem/HrSystem/Views/Shared/_Layout.cshtml
@@ -171,10 +171,10 @@
             <h4>Admin</h4>
         </center>
         <a href="file:///C:/Users/Admin/Desktop/HR/admindashboard.html"><i class="fas fa-home"></i><span>Home</span></a>
-        <a href="file:///C:/Users/Admin/Desktop/HR/applications.html"><i class="fas fa-user-tie"></i><span>Applications</span></a>
-        <a href="file:///C:/Users/Admin/Desktop/HR/vacancy.html"><i class="fas fa-list"></i><span>Vacancy</span></a>
+        <a href="~/Applications"><i class="fas fa-user-tie"></i><span>Applications</span></a>
+        <a href="~/Vacancy"><i class="fas fa-list"></i><span>Vacancy</span></a>
         <a href="file:///C:/Users/Admin/Desktop/HR/statuscategory.html"><i class="fas fa-list"></i><span>Status Category</span></a>
-        <a href="file:///C:/Users/Admin/Desktop/HR/users.html"><i class="fas fa-users"></i><span>Users</span></a>
+        <a href="~/Users"><i class="fas fa-users"></i><span>Users</span></a>
         <a href="file:///C:/Users/Admin/Desktop/HR/setting.html"><i class="fas fa-cogs"></i><span>Settings</span></a>
     </div>
     <!--sidebar end-->
