--- a/HrSystem/HrSystem/Views/Applications/Index.cshtml
+++ b/HrSystem/HrSystem/Views/Applications/Index.cshtml
@@ -54,7 +54,7 @@
                 <tr>
                     <td>@Model[i].Id</td>
                     <td>
-                        Name : @Model[i].Name<br>
+                        Name : @Model[i].FullName<br>
                         Applied for : @Model[i].AppliedFor<br>
                         Experience : @Model[i].Experience
                     </td>
