added status category DB

--- a/HrSystem/HrSystem/Views/Home/Index.cshtml
+++ b/HrSystem/HrSystem/Views/Home/Index.cshtml
@@ -3,6 +3,28 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <div class="content">
+        <center><h3>Welcome back Administrator!<h3></center>
+        <br>
+        <div class="row">
+
+            <div class="column">
+                <div class="card">
+                    <h3>New Applicant</h3>
+                    <p>3</p>
+
+                </div>
+            </div>
+
+            <div class="column">
+                <div class="card">
+                    <h3>Active Vacancies</h3>
+                    <p>2</p>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 </div>
