--- a/HrSystem/HrSystem/Views/Applications/Index.cshtml
+++ b/HrSystem/HrSystem/Views/Applications/Index.cshtml
@@ -55,7 +55,7 @@
                     <td>@Model[i].Id</td>
                     <td>
                         Name : @Model[i].FirstName<br>
-                        Applied for : @Model[i].AppliedFor<br>
+                        Applied for : @Model[i].VacancyId<br>
                         Experience : @Model[i].Experience
                     </td>
                     <td><a href="https://www.w3schools.com/">Smith_Resume</a></td>
