--- a/HrSystem/HrSystem/Views/Applications/Index.cshtml
+++ b/HrSystem/HrSystem/Views/Applications/Index.cshtml
@@ -14,18 +14,30 @@
     <div class="row">
         <div class="col-6">
             <div class="form-group">
-                <label  for="Id">Id:</label>
+                <label for="Id">Id:</label>
                 <input type="text" class="form-control" value="@applicationModel.IdSearch" name="IdSearch" id="IdSearch">
             </div>
         </div>
         <div class="col-6">
             <div class="form-group">
-                <label  for="Name">Name</label>
+                <label for="Name">Name</label>
                 <input type="text" class="form-control" value="@applicationModel.NameSearch" name="NameSearch" id="NameSearch">
             </div>
         </div>
 
-        
+        <div class="col-6">
+            <div class="form-group">
+                <label for="Id">Applied For:</label>
+                <input type="text" class="form-control" value="@applicationModel.AppliedForSearch" name="AppliedForSearch" id="AppliedForSearch">
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="form-group">
+                <label for="Name">Status :</label>
+                <input type="text" class="form-control" value="@applicationModel.StageStatusSearch" name="StageStatusSearch" id="StageStatusSearch">
+            </div>
+        </div>
+
     </div>
     
 
