--- a/HrSystem/HrSystem/Views/Applications/jquery.cshtml
+++ b/HrSystem/HrSystem/Views/Applications/jquery.cshtml
@@ -22,7 +22,7 @@
                     <tr>
                         <td>@Model[i].Id</td>
                         <td>
-                            Name : @Model[i].Name<br>
+                            Name : @Model[i].FirstName<br>
                             Applied for : @Model[i].AppliedFor<br>
                             Experience : @Model[i].Experience
                         </td>
