--- a/HrSystem/HrSystem/Views/Applications/Add.cshtml
+++ b/HrSystem/HrSystem/Views/Applications/Add.cshtml
@@ -12,11 +12,14 @@
     <div class="col-md-4">
        
         <form asp-action="Save" method="post">
+
+            @Html.HiddenFor(x => x.Id)
+
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                @Html.LabelFor(x=>x.FirstName,new  { @class= "control-label" })
+                @Html.LabelFor(x => x.FirstName, new { @class = "control-label" })
                 @Html.TextBoxFor(x => x.FirstName, new { @class = "form-control" })
-                @Html.ValidationMessageFor(x => x.FirstName,"", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(x => x.FirstName, "", new { @class = "text-danger" })
             </div>
             <div class="form-group">
                 <label asp-for="MiddleName" class="control-label"></label>
