--- a/HrSystem/HrSystem/Views/Applications/Index.cshtml
+++ b/HrSystem/HrSystem/Views/Applications/Index.cshtml
@@ -83,8 +83,8 @@
                     <td><span class="badge badge-success">New</span></td>
                     <td>
                         <button type="button" class="btn btn-success">View</button>
-                        <a  href="~/Applications/Edit/@Model[i].Id">   Edit</a>
-                        <button type="button" class="btn btn-danger">Delete</button>
+                        <a href="~/Applications/Edit/@Model[i].Id">   Edit</a>
+                        <a href="~/Applications/delete/@Model[i].Id"  onclick="isDelete()">   Delete</a>
                     </td>
 
                 </tr>
@@ -148,6 +148,16 @@
         document.getElementById("currentPage").value = currentPage;
         pageSubmit();
         return false;
+    }
+
+
+    function isDelete() {
+        if (confirm("do you want to delete user")) {
+
+        } else {
+            event.preventDefault();
+            return false;
+        }
     }
 
 
