--- a/HrSystem/HrSystem/Views/Applications/Add.cshtml
+++ b/HrSystem/HrSystem/Views/Applications/Add.cshtml
@@ -8,10 +8,10 @@
 
 <h4>Application</h4>
 <hr />
-<div class="row">
+<div class="row_group">
     <div class="col-md-4">
        
-        <form asp-action="Save" method="post">
+        <form class="form_container" asp-action="Save" method="post">
 
             @Html.HiddenFor(x => x.Id)
 
