--- a/HrSystem/HrSystem/Views/Shared/_Layout.cshtml
+++ b/HrSystem/HrSystem/Views/Shared/_Layout.cshtml
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.24/css/dataTables.bootstrap4.min.css">
-
-    <link rel="stylesheet" href="~/css/Create.css">
+    <link rel="stylesheet" href="~/css/Login.css">
+    
+  
 
     <style>
         body {
@@ -204,6 +205,9 @@
             .status__page form label {
                 font-size: 30px;
             }
+
+           }
+
     </style>
 
 </head>
@@ -231,7 +235,7 @@
         <a href="~/Home"><i class="fas fa-home"></i><span>Home</span></a>
         <a href="~/Applications"><i class="fas fa-user-tie"></i><span>Applications</span></a>
         <a href="~/Vacancy"><i class="fas fa-list"></i><span>Vacancy</span></a>
-        <a href="~/StatusCategory"><i class="fas fa-list"></i><span>Status Category</span></a>
+        <a href="~/Stages"><i class="fas fa-list"></i><span>Stages</span></a>
         <a href="~/Users"><i class="fas fa-users"></i><span>Users</span></a>
         <a href="#"><i class="fas fa-cogs"></i><span>Settings</span></a>
     </div>
