--- a/HrSystem/HrSystem/Views/Users/Index.cshtml
+++ b/HrSystem/HrSystem/Views/Users/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model List<User>
 @using HRModels
-<center><button type="button" class="btn btn-primary">+ New User</button></center>
+<a href="~/Users/Add">
+<center><button type="button" class="btn btn-primary">+ New User</button></center></a>
 <br >
 <hr>
 @{
