--- a/HrSystem/HrSystem/Views/Stages/Index.cshtml
+++ b/HrSystem/HrSystem/Views/Stages/Index.cshtml
@@ -1,20 +1,9 @@
-﻿
+﻿@*@model List<Stage>*@
+<a href="~/Stages/Add">
+<center><button type="button" class="btn btn-primary">+ New Stage</button></center></a>
+<br />
 <div class="row">
-    <div class="col-sm-3 col-md-6 col-lg-4">
-        <div class="status__page">
-
-            <u> <h2>Status Form</h2></u>
-
-            <form>
-                <label for="status">Status</label>
-                <input type="text" id="status" name="status" />
-
-                <button>Save</button><button>Cancel</button>
-
-            </form>
-        </div>
-
-    </div>
+   
     <div class="col-sm-9 col-md-6 col-lg-8">
         <table id="example" class="table table-striped table-bordered" style="width:80%">
             <thead>
@@ -27,7 +16,18 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
+               
+                    @*@for(int i=1; i< Model.Count; i++)
+                    { <tr>
+                        <td>@Model[i].ID</td>
+                    <td>@Model[i].Name</td>
+                     <td>
+                        <button type="button" class="btn btn-warning">Edit</button>
+                        <button type="button" class="btn btn-danger">Delete</button>
+                    </td>
+                    </tr>
+                    } *@
+                    <tr>
                     <td>1</td>
                     <td>PASSED II</td>
 
