--- a/HrSystem/HrSystem/Views/Applications/Add.cshtml
+++ b/HrSystem/HrSystem/Views/Applications/Add.cshtml
@@ -67,12 +67,12 @@
                 <span asp-validation-for="Resume" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="VacancyId" class="control-label"></label>
-                <select asp-for="VacancyId" class="form-control" asp-items="ViewBag.VacancyId"></select>
+                <label asp-for="Vacancy" class="control-label"></label>
+                <select asp-for="Vacancy" class="form-control" asp-items="ViewBag.VacancyId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="StageId" class="control-label"></label>
-                <select asp-for="StageId" class="form-control" asp-items="ViewBag.StageId"></select>
+                <label asp-for="Stage" class="control-label"></label>
+                <select asp-for="Stage" class="form-control" asp-items="ViewBag.StageId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="DateCreated" class="control-label"></label>
