--- a/HrSystem/HrSystem/Views/Vacancy/Index.cshtml
+++ b/HrSystem/HrSystem/Views/Vacancy/Index.cshtml
@@ -1,13 +1,15 @@
 ﻿
 @model List<Vacancy>
 @using HRModels;
-
 <center><h2>Vacancy List</h2></center>
-<center><button type="button" class="btn btn-primary">+ New Vacancy</button></center>
+<a href="~/Vacancy/Add">
+    <center><button type="button" class="btn btn-primary">+ New Vacancy</button></center>
+</a>
+
 <br>
 @{
     VacancyModel vacancyModel = ViewBag.vacancyModel as VacancyModel;
-    PageModel pageModel= ViewBag.pageModel as  PageModel;
+    PageModel pageModel = ViewBag.pageModel as PageModel;
 }
 
 <form method="post" action="/Vacancy/Index">
@@ -25,16 +27,16 @@
             </div>
         </div>
 
-     </div>   
+    </div>
 
-        <input type="hidden" name="columnName" id="columnName" value="@ViewBag.columnName" />
-        <input type="hidden" name="orderBy" id="orderBy" value="@ViewBag.orderBy" />
-        <input type="hidden" name="currentPage" id="currentPage" value="@pageModel.CurrentPage" />
-        <button type="submit" id="btnSubmit">Search</button>
+    <input type="hidden" name="columnName" id="columnName" value="@ViewBag.columnName" />
+    <input type="hidden" name="orderBy" id="orderBy" value="@ViewBag.orderBy" />
+    <input type="hidden" name="currentPage" id="currentPage" value="@pageModel.CurrentPage" />
+    <button type="submit" id="btnSubmit">Search</button>
 </form>
 <div class="container">
     <table id="example" class="table table-striped table-bordered" style="width:100%">
-        <thead> 
+        <thead>
             <tr>
                 <th><a onclick="sort('id','@ViewBag.orderBy')" href="/vacancy/index?columnName=id&orderBy=@ViewBag.orderBy">#</a></th>
                 <th><a onclick="sort('position','@ViewBag.orderBy')" href="/vacancy/index?columnName=position&orderBy=asc">Vacancy Information</a></th>
@@ -58,8 +60,9 @@
                     <td><span class="badge badge-success">Active</span></td>
                     <td>
                         <button type="button" class="btn btn-success">View</button>
-                        <button type="button" class="btn btn-warning">Edit</button>
-                        <button type="button" class="btn btn-danger">Delete</button>
+                        <a href="~/Vacancy/Edit/@Model[i].Id">  <button type="button" class="btn btn-warning">Edit</button> </a>
+                      
+                        <a href="~/Vacancy/Edit/@Model[i].Id"><button type="button" class="btn btn-danger">Delete</button></a>
                     </td>
 
                 </tr>
@@ -80,33 +83,39 @@
             </tr>
         </tfoot>
     </table>
-    <div class="row"><div class="col-sm-12 col-md-5">
-        <div class="dataTables_info" id="example_info" role="status" aria-live="polite">
-            Showing <span>@(pageModel.StartIndex+1)</span> to <span>@(pageModel.EndIndex+1)</span> of <span>@(pageModel.TotalRowCount) </span> entries</div></div><div class="col-sm-12 col-md-7">
-        <div class="dataTables_paginate paging_simple_numbers" id="example_paginate">
-            <ul class="pagination">
-                <li class="paginate_button page-item previous" id="example_previous">
-                    <a href="#" aria-controls="example" data-dt-idx="0" tabindex="0" class="page-link">Previous</a>
-                </li>
-                @for (int i = 1; i <= pageModel.PageCount; i = i + 1)
-                {
-                    if (i == pageModel.CurrentPage)
+    <div class="row">
+        <div class="col-sm-12 col-md-5">
+            <div class="dataTables_info" id="example_info" role="status" aria-live="polite">
+                Showing <span>@(pageModel.StartIndex+1)</span> to <span>@(pageModel.EndIndex+1)</span> of <span>@(pageModel.TotalRowCount) </span> entries
+            </div>
+        </div><div class="col-sm-12 col-md-7">
+            <div class="dataTables_paginate paging_simple_numbers" id="example_paginate">
+                <ul class="pagination">
+                    <li class="paginate_button page-item previous" id="example_previous">
+                        <a href="#" aria-controls="example" data-dt-idx="0" tabindex="0" class="page-link">Previous</a>
+                    </li>
+                    @for (int i = 1; i <= pageModel.PageCount; i = i + 1)
                     {
-                        <li class="paginate_button page-item active"><a onclick="pageChange('@i')" href="/vacancy/index?currentPage=@i" aria-controls="example" data-dt-idx="1" tabindex="0" class="page-link">@i</a></li>
+                        if (i == pageModel.CurrentPage)
+                        {
+                            <li class="paginate_button page-item active"><a onclick="pageChange('@i')" href="/vacancy/index?currentPage=@i" aria-controls="example" data-dt-idx="1" tabindex="0" class="page-link">@i</a></li>
 
 
-                     }
-                    else
-                    {
+                        }
+                        else
+                        {
 
-                        <li class="paginate_button page-item "><a onclick="pageChange('@i')" href="/vacancy/index?currentPage=@i" aria-controls="example" data-dt-idx="1" tabindex="0" class="page-link">@i</a></li>
+                            <li class="paginate_button page-item "><a onclick="pageChange('@i')" href="/vacancy/index?currentPage=@i" aria-controls="example" data-dt-idx="1" tabindex="0" class="page-link">@i</a></li>
+                        }
+
                     }
 
-                }
 
-                
-                <li class="paginate_button page-item next disabled" id="example_next"><a href="#" aria-controls="example" data-dt-idx="3" tabindex="0" class="page-link">Next</a></li>
-            </ul></div></div></div>
+                    <li class="paginate_button page-item next disabled" id="example_next"><a href="#" aria-controls="example" data-dt-idx="3" tabindex="0" class="page-link">Next</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </div>
 
 <script>
@@ -115,8 +124,7 @@
     function pageSubmit() {
         document.getElementById("btnSubmit").click();
     }
-    function pageChange(currentPage)
-    {
+    function pageChange(currentPage) {
         event.preventDefault();
         document.getElementById("currentPage").value = currentPage;
         pageSubmit();
@@ -136,7 +144,7 @@
         pageSubmit();
         return false;
     }
-    </script>
+</script>
 <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
 <script src="https://cdn.datatables.net/1.10.24/js/dataTables.bootstrap4.min.js"></script>
