--- a/HrSystem/HrSystem/Views/Vacancy/Add.cshtml
+++ b/HrSystem/HrSystem/Views/Vacancy/Add.cshtml
@@ -46,7 +46,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="DateCreated" class="control-label"></label>
-                <input asp-for="DateCreated" class="form-control" />
+                <input asp-for="DateCreated" class="form-control" type="text" />
                 <span asp-validation-for="DateCreated" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -59,4 +59,17 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+@section Scripts {
+    <script>
 
+        $(document).ready(function () {
+            $("#DateCreated").datepicker({
+                dateFormat: 'dd-mm-yy',
+                changeMonth: true,
+                changeYear: true,
+                yearRange: "2020:2030"
+            });
+
+        });
+    </script>
+}
